--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,8 @@ html{
 	background-color: var(--color-dark-blue);
 	color: white;
 	min-height: 100%;
+	overflow: hidden;
+  	position: relative;
 }
 
 h1{font-size: 64px;}
@@ -79,61 +81,81 @@ body{width: 50%;}
 	font-family: Roboto-Bold;
 }
 
-
-
-.cta-main-button{
+.cta-main-button, .cta-secondary-button{
 	font-size: 36px;
 	font-weight: bold;
 	color: white;
-	background-color: var(--color-electric-purple);
-	box-shadow: -10px 10px var(--color-purple-shadow);
-	margin: 10px;
+	margin: 15px;
 	padding: 10px 20px 10px 20px;
 	font-weight: 100;
-	opacity: 0;
 	position: relative;
-	top: 100px;
-	animation: slide 0.5s forwards;
-    animation-delay: 1.1s;
-	-webkit-animation:slide 0.5s forwards;
-	-webkit-animation-delay:1.1s;
+}
+
+.cta-main-button{
+	background-color: var(--color-electric-purple);
+	box-shadow: -10px 10px var(--color-purple-shadow);
 }
 
 .cta-secondary-button{
-	font-size: 36px;
-	color: white;
-	font-weight: bold;
 	background-color: var(--color-electric-blue);
 	box-shadow: -10px 10px var(--color-blue-shadow);
-	margin: 10px;
-	padding: 10px 20px 10px 20px;
-	font-weight: 100;
-	opacity: 0;
-	position: relative;
-	top: 100px;
-	animation: slide 0.5s forwards;
-    animation-delay: 1.1s;
-	-webkit-animation:slide 0.5s forwards;
-	-webkit-animation-delay:1.1s;
 }
 
-#index-subtitle{
-	opacity: 0;
-	position: relative;
-	top: 100px;
-	animation: slide 0.5s forwards;
-    animation-delay: 1s;
-	-webkit-animation:slide 0.5s forwards;
-	-webkit-animation-delay:1s;
+.cta-main-button:not(.no-hover):hover, .cta-secondary-button:not(.no-hover):hover{
+	animation: grows 0.0s forwards; 
+	-webkit-animation:grows 0.0s forwards;
 }
+.animate-slide-up{
+	position: relative;
+	top: 100vh;
+	animation: slide 1s forwards;
+	-webkit-animation:slide 1s forwards;
+}
+
+
+.animate-fly-right{
+	animation: fly-right 0.5s forwards; 
+	-webkit-animation:fly-right 0.5s forwards;
+}
+.animate-fly-left{
+	animation: fly-left 0.5s forwards; 
+	-webkit-animation:fly-left 0.5s forwards;
+}
+
+
 
 @-webkit-keyframes slide {
-    100% { top: 0px; opacity: 1;}
+    100% { top: 0px; }
 }
 
 @keyframes slide{
-	100% { top: 0px; opacity: 1;}
+	100% { top: 0px;}
 }
+
+@-webkit-keyframes grows {
+    100% { transform: scale(1.1)}
+}
+
+@keyframes grows{
+	100% { transform: scale(1.1)}
+}
+
+@keyframes fly-right {
+	100% { transform: translate(150vw,0vw);}
+}
+
+@-webkit-keyframes fly-right {
+    100% { transform: translate(150vw,0vw); }
+}
+
+@keyframes fly-left {
+	100% { transform: translate(-150vw,0vw);}
+}
+
+@-webkit-keyframes fly-left {
+    100% { transform: translate(-150vw,0vw); }
+}
+
 
 .random-text{
 	position: absolute;
