--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,9 @@
 	font-family: Roboto-Medium;
 	font-weight: 100;
 }
+a{
+	color: var(--color-dark-blue);
+}
 
 html{
 	display: flex;
@@ -118,7 +121,6 @@ body{
 	position: relative;
 	top: 100vh;
 	animation: slide 1s forwards;
-	animation-delay: 1.2s;
 }
 
 
@@ -147,7 +149,7 @@ body{
 	100% { transform: translate(-150vw,0vw);}
 }
 
-*{
+.random-text{
 	-webkit-user-select: none; /* Safari */        
 	-moz-user-select: none; /* Firefox */
 	-ms-user-select: none; /* IE10+/Edge */
@@ -184,13 +186,20 @@ body{
 }
 
 #chat-with-me-container{
-	left: 0;
 	height: 100%;
 	width: 100%;
 	overflow-y: scroll;
 	overflow-x: hidden;
+	display: block;
+}
+
+#chat-with-me-container > div{
+	width: 100%;
+	min-height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin: 0px;
+	padding: 0px;
 }
